--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "26.0.0"
     defaultConfig {
-        applicationId "com.devgamarra.bingo"
+        applicationId "com.devgamarra.bingo8"
         minSdkVersion 17
         targetSdkVersion 25
         versionCode 1
@@ -28,3 +28,5 @@ dependencies {
     compile 'com.google.android.gms:play-services-ads:11.0.2'
     testCompile 'junit:junit:4.12'
 }
+
+apply plugin: 'com.google.gms.google-services'
